# SGHSS-VidaPlus

./: .gitignore  Dockerfile  README.md  prox_implementações.txt  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 36a57979bb23_generate_tables.py  682ad7b8efe1_create_tables.py  76b35f4c764f_generate_tables.py  7f60e1ea6219_create_tables.py  8411d3b4e410_generate_table.py  bc7827844a23_generate_tables.py
tests/: conftest.py  test_auth.py  test_consulta.py  test_db.py  test_paciente.py  test_profissional.py  test_security.py
vidaplus/: app.py  database.py  logger.py  logging_config.py  main.py  request_context.py  security.py
vidaplus/api/endpoints/: auth.py  consulta.py  estoque.py  exame.py  leitos.py  pacientes.py  prescricoes.py  profissionais.py  prontuario.py
vidaplus/models/: models.py
vidaplus/schemas/: consulta_schema.py  estoques_schema.py  exame_schema.py  leitos_schema.py  paciente_schema.py  prescricao_schema.py  profissional_schema.py  prontuario_schema.py
vidaplus/utils/: consulta_choices.py  exames_choices.py  general.py  leitos_choices.py  prescricoes_choices.py  update_models.py
